--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "6.1.95" !default;
+$mdi-version:          "6.2.95" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -25,10 +25,14 @@ $mdi-icons: (
   "account": F0004,
   "account-alert": F0005,
   "account-alert-outline": F0B50,
+  "account-arrow-down": F1868,
+  "account-arrow-down-outline": F1869,
   "account-arrow-left": F0B51,
   "account-arrow-left-outline": F0B52,
   "account-arrow-right": F0B53,
   "account-arrow-right-outline": F0B54,
+  "account-arrow-up": F1867,
+  "account-arrow-up-outline": F186A,
   "account-box": F0006,
   "account-box-multiple": F0934,
   "account-box-multiple-outline": F100A,
@@ -129,8 +133,19 @@ $mdi-icons: (
   "airballoon": F001C,
   "airballoon-outline": F100B,
   "airplane": F001D,
+  "airplane-alert": F187A,
+  "airplane-check": F187B,
+  "airplane-clock": F187C,
+  "airplane-cog": F187D,
+  "airplane-edit": F187E,
   "airplane-landing": F05D4,
+  "airplane-marker": F187F,
+  "airplane-minus": F1880,
   "airplane-off": F001E,
+  "airplane-plus": F1881,
+  "airplane-remove": F1882,
+  "airplane-search": F1883,
+  "airplane-settings": F1884,
   "airplane-takeoff": F05D5,
   "airport": F084B,
   "alarm": F0020,
@@ -180,6 +195,8 @@ $mdi-icons: (
   "align-vertical-center": F11C6,
   "align-vertical-top": F11C7,
   "all-inclusive": F06BE,
+  "all-inclusive-box": F188D,
+  "all-inclusive-box-outline": F188E,
   "allergy": F1258,
   "alpha": F002B,
   "alpha-a": F0AEE,
@@ -505,6 +522,8 @@ $mdi-icons: (
   "arrow-left-thin-circle-outline": F159A,
   "arrow-left-top": F17A7,
   "arrow-left-top-bold": F17A8,
+  "arrow-projectile": F1840,
+  "arrow-projectile-multiple": F183F,
   "arrow-right": F0054,
   "arrow-right-bold": F0734,
   "arrow-right-bold-box": F0735,
@@ -587,6 +606,9 @@ $mdi-icons: (
   "atom": F0768,
   "atom-variant": F0E7B,
   "attachment": F0066,
+  "audio-input-rca": F186B,
+  "audio-input-stereo-minijack": F186C,
+  "audio-input-xlr": F186D,
   "audio-video": F093D,
   "audio-video-off": F11B6,
   "augmented-reality": F0850,
@@ -597,6 +619,7 @@ $mdi-icons: (
   "av-timer": F006B,
   "aws": F0E0F,
   "axe": F08C8,
+  "axe-battle": F1842,
   "axis": F0D48,
   "axis-arrow": F0D49,
   "axis-arrow-info": F140E,
@@ -779,6 +802,8 @@ $mdi-icons: (
   "battery-positive": F0090,
   "battery-remove": F17E8,
   "battery-remove-outline": F17E9,
+  "battery-sync": F1834,
+  "battery-sync-outline": F1835,
   "battery-unknown": F0091,
   "battery-unknown-bluetooth": F094A,
   "beach": F0092,
@@ -1009,6 +1034,7 @@ $mdi-icons: (
   "bottle-tonic-skull-outline": F1133,
   "bottle-wine": F0854,
   "bottle-wine-outline": F1310,
+  "bow-arrow": F1841,
   "bow-tie": F0678,
   "bowl": F028E,
   "bowl-mix": F0617,
@@ -1103,6 +1129,7 @@ $mdi-icons: (
   "bus-stop-uncovered": F1014,
   "butterfly": F1589,
   "butterfly-outline": F158A,
+  "cabin-a-frame": F188C,
   "cable-data": F1394,
   "cached": F00E8,
   "cactus": F0DB5,
@@ -1172,6 +1199,8 @@ $mdi-icons: (
   "camera-account": F08CB,
   "camera-burst": F0693,
   "camera-control": F0B69,
+  "camera-document": F1871,
+  "camera-document-off": F1872,
   "camera-enhance": F0101,
   "camera-enhance-outline": F0B6A,
   "camera-flip": F15D9,
@@ -1252,6 +1281,7 @@ $mdi-icons: (
   "car-seat": F0FA4,
   "car-seat-cooler": F0FA5,
   "car-seat-heater": F0FA6,
+  "car-select": F1879,
   "car-settings": F13CD,
   "car-shift-pattern": F0F40,
   "car-side": F07AB,
@@ -1262,6 +1292,7 @@ $mdi-icons: (
   "car-wash": F010E,
   "car-windshield": F101B,
   "car-windshield-outline": F101C,
+  "car-wireless": F1878,
   "car-wrench": F1814,
   "carabiner": F14C0,
   "caravan": F07AD,
@@ -1320,6 +1351,7 @@ $mdi-icons: (
   "cash": F0114,
   "cash-100": F0115,
   "cash-check": F14EE,
+  "cash-fast": F185C,
   "cash-lock": F14EA,
   "cash-lock-open": F14EB,
   "cash-marker": F0DB8,
@@ -1340,6 +1372,7 @@ $mdi-icons: (
   "castle": F011A,
   "cat": F011B,
   "cctv": F07AE,
+  "cctv-off": F185F,
   "ceiling-fan": F1797,
   "ceiling-fan-light": F1798,
   "ceiling-light": F0769,
@@ -1356,6 +1389,7 @@ $mdi-icons: (
   "cellphone-link": F0121,
   "cellphone-link-off": F0122,
   "cellphone-lock": F094F,
+  "cellphone-marker": F183A,
   "cellphone-message": F08D3,
   "cellphone-message-off": F10D2,
   "cellphone-nfc": F0E90,
@@ -1526,6 +1560,7 @@ $mdi-icons: (
   "circle-multiple": F0B38,
   "circle-multiple-outline": F0695,
   "circle-off-outline": F10D3,
+  "circle-opacity": F1853,
   "circle-outline": F0766,
   "circle-slice-1": F0A9E,
   "circle-slice-2": F0A9F,
@@ -1606,8 +1641,14 @@ $mdi-icons: (
   "clock-end": F0151,
   "clock-fast": F0152,
   "clock-in": F0153,
+  "clock-minus": F1863,
+  "clock-minus-outline": F1864,
   "clock-out": F0154,
   "clock-outline": F0150,
+  "clock-plus": F1861,
+  "clock-plus-outline": F1862,
+  "clock-remove": F1865,
+  "clock-remove-outline": F1866,
   "clock-start": F0155,
   "clock-time-eight": F1446,
   "clock-time-eight-outline": F1452,
@@ -1963,6 +2004,8 @@ $mdi-icons: (
   "cursor-move": F01BE,
   "cursor-pointer": F01BD,
   "cursor-text": F05E7,
+  "curtains": F1846,
+  "curtains-closed": F1847,
   "dance-ballroom": F15FB,
   "dance-pole": F1578,
   "data-matrix": F153C,
@@ -2115,6 +2158,7 @@ $mdi-icons: (
   "distribute-vertical-bottom": F11CB,
   "distribute-vertical-center": F11CC,
   "distribute-vertical-top": F11CD,
+  "diversify": F1877,
   "diving-flippers": F0DBF,
   "diving-helmet": F0DC0,
   "diving-scuba": F0DC1,
@@ -2201,6 +2245,10 @@ $mdi-icons: (
   "dump-truck": F0C67,
   "ear-hearing": F07C5,
   "ear-hearing-off": F0A45,
+  "earbuds": F184F,
+  "earbuds-off": F1850,
+  "earbuds-off-outline": F1851,
+  "earbuds-outline": F1852,
   "earth": F01E7,
   "earth-arrow-right": F1311,
   "earth-box": F06CD,
@@ -2214,6 +2262,7 @@ $mdi-icons: (
   "earth-remove": F1405,
   "egg": F0AAF,
   "egg-easter": F0AB0,
+  "egg-fried": F184A,
   "egg-off": F13F0,
   "egg-off-outline": F13F1,
   "egg-outline": F13F2,
@@ -2241,6 +2290,8 @@ $mdi-icons: (
   "email-check-outline": F0AB2,
   "email-edit": F0EE3,
   "email-edit-outline": F0EE4,
+  "email-fast": F186F,
+  "email-fast-outline": F1870,
   "email-lock": F01F1,
   "email-mark-as-unread": F0B92,
   "email-minus": F0EE5,
@@ -2653,6 +2704,8 @@ $mdi-icons: (
   "floppy-variant": F09EF,
   "flower": F024A,
   "flower-outline": F09F0,
+  "flower-pollen": F1885,
+  "flower-pollen-outline": F1886,
   "flower-poppy": F0D08,
   "flower-tulip": F09F1,
   "flower-tulip-outline": F09F2,
@@ -2745,10 +2798,13 @@ $mdi-icons: (
   "food-drumstick-outline": F1420,
   "food-fork-drink": F05F2,
   "food-halal": F1572,
+  "food-hot-dog": F184B,
   "food-kosher": F1573,
   "food-off": F05F3,
   "food-steak": F146A,
   "food-steak-off": F146B,
+  "food-takeout-box": F1836,
+  "food-takeout-box-outline": F1837,
   "food-turkey": F171C,
   "food-variant": F025C,
   "food-variant-off": F13E5,
@@ -2756,6 +2812,7 @@ $mdi-icons: (
   "football": F025D,
   "football-australian": F025E,
   "football-helmet": F025F,
+  "forest": F1897,
   "forklift": F07C9,
   "form-dropdown": F1400,
   "form-select": F1401,
@@ -2817,6 +2874,7 @@ $mdi-icons: (
   "format-list-bulleted-type": F027A,
   "format-list-checkbox": F096A,
   "format-list-checks": F0756,
+  "format-list-group": F1860,
   "format-list-numbered": F027B,
   "format-list-numbered-rtl": F0D0D,
   "format-list-text": F126F,
@@ -3003,6 +3061,7 @@ $mdi-icons: (
   "glass-cocktail": F0356,
   "glass-cocktail-off": F15E6,
   "glass-flute": F02A5,
+  "glass-fragile": F1873,
   "glass-mug": F02A6,
   "glass-mug-off": F15E7,
   "glass-mug-variant": F1116,
@@ -3092,6 +3151,7 @@ $mdi-icons: (
   "hamburger-remove": F177A,
   "hammer": F08EA,
   "hammer-screwdriver": F1322,
+  "hammer-sickle": F1887,
   "hammer-wrench": F1323,
   "hand-back-left": F0E46,
   "hand-back-left-off": F1830,
@@ -3101,6 +3161,8 @@ $mdi-icons: (
   "hand-back-right-off": F1831,
   "hand-back-right-off-outline": F1833,
   "hand-back-right-outline": F182D,
+  "hand-coin": F188F,
+  "hand-coin-outline": F1890,
   "hand-front-left": F182B,
   "hand-front-left-outline": F182E,
   "hand-front-right": F0A4F,
@@ -3285,6 +3347,7 @@ $mdi-icons: (
   "horse": F15BF,
   "horse-human": F15C0,
   "horse-variant": F15C1,
+  "horse-variant-fast": F186E,
   "horseshoe": F0A58,
   "hospital": F0FF6,
   "hospital-box": F02E0,
@@ -3323,6 +3386,7 @@ $mdi-icons: (
   "human-male-height": F0EFB,
   "human-male-height-variant": F0EFC,
   "human-male-male": F0A5E,
+  "human-non-binary": F1848,
   "human-pregnant": F05CF,
   "human-queue": F1571,
   "human-scooter": F11E9,
@@ -3333,6 +3397,7 @@ $mdi-icons: (
   "hydraulic-oil-level": F1324,
   "hydraulic-oil-temperature": F1325,
   "hydro-power": F12E5,
+  "hydrogen-station": F1894,
   "ice-cream": F082A,
   "ice-cream-off": F0E52,
   "ice-pop": F0EFD,
@@ -3395,6 +3460,7 @@ $mdi-icons: (
   "incognito-circle": F1421,
   "incognito-circle-off": F1422,
   "incognito-off": F0075,
+  "induction": F184C,
   "infinity": F06E4,
   "information": F02FC,
   "information-off": F178C,
@@ -3411,6 +3477,7 @@ $mdi-icons: (
   "ip-network-outline": F0C90,
   "ipod": F0C91,
   "iron": F1824,
+  "iron-board": F1838,
   "iron-outline": F1825,
   "island": F104F,
   "iv-bag": F10B9,
@@ -3541,6 +3608,7 @@ $mdi-icons: (
   "launch": F0327,
   "lava-lamp": F07D5,
   "layers": F0328,
+  "layers-edit": F1892,
   "layers-minus": F0E4C,
   "layers-off": F0329,
   "layers-off-outline": F09FD,
@@ -3679,12 +3747,15 @@ $mdi-icons: (
   "loupe": F0345,
   "lumx": F0346,
   "lungs": F1084,
+  "mace": F1843,
   "magazine-pistol": F0324,
   "magazine-rifle": F0323,
+  "magic-staff": F1844,
   "magnet": F0347,
   "magnet-on": F0348,
   "magnify": F0349,
   "magnify-close": F0980,
+  "magnify-expand": F1874,
   "magnify-minus": F034A,
   "magnify-minus-cursor": F0A62,
   "magnify-minus-outline": F06EC,
@@ -3921,6 +3992,7 @@ $mdi-icons: (
   "monitor-screenshot": F0E51,
   "monitor-share": F1483,
   "monitor-shimmer": F1104,
+  "monitor-small": F1876,
   "monitor-speaker": F0F5F,
   "monitor-speaker-off": F0F60,
   "monitor-star": F0DDC,
@@ -4014,6 +4086,7 @@ $mdi-icons: (
   "mower": F166F,
   "mower-bag": F1670,
   "muffin": F098C,
+  "multicast": F1893,
   "multiplication": F0382,
   "multiplication-box": F0383,
   "mushroom": F07DF,
@@ -4479,6 +4552,7 @@ $mdi-icons: (
   "pipe": F07E5,
   "pipe-disconnected": F07E6,
   "pipe-leak": F0889,
+  "pipe-valve": F184D,
   "pipe-wrench": F1354,
   "pirate": F0A08,
   "pistol": F0703,
@@ -4536,6 +4610,7 @@ $mdi-icons: (
   "polaroid": F041E,
   "police-badge": F1167,
   "police-badge-outline": F1168,
+  "police-station": F1839,
   "poll": F041F,
   "polo": F14C3,
   "polymer": F0421,
@@ -4669,6 +4744,8 @@ $mdi-icons: (
   "radio-off": F121C,
   "radio-tower": F043B,
   "radioactive": F043C,
+  "radioactive-circle": F185D,
+  "radioactive-circle-outline": F185E,
   "radioactive-off": F0EC1,
   "radiobox-blank": F043D,
   "radiobox-marked": F043E,
@@ -5072,6 +5149,7 @@ $mdi-icons: (
   "shield-sync-outline": F11A3,
   "shimmer": F1545,
   "ship-wheel": F0833,
+  "shipping-pallet": F184E,
   "shoe-ballet": F15CA,
   "shoe-cleat": F15C7,
   "shoe-formal": F0B47,
@@ -5287,6 +5365,7 @@ $mdi-icons: (
   "speaker-multiple": F0D38,
   "speaker-off": F04C4,
   "speaker-wireless": F071F,
+  "spear": F1845,
   "speedometer": F04C5,
   "speedometer-medium": F0F85,
   "speedometer-slow": F0F86,
@@ -5312,6 +5391,7 @@ $mdi-icons: (
   "square-medium-outline": F0A14,
   "square-off": F12EE,
   "square-off-outline": F12EF,
+  "square-opacity": F1854,
   "square-outline": F0763,
   "square-root": F0784,
   "square-root-box": F09A3,
@@ -5497,6 +5577,7 @@ $mdi-icons: (
   "table-of-contents": F0836,
   "table-off": F13CA,
   "table-picnic": F1743,
+  "table-pivot": F183C,
   "table-plus": F0A75,
   "table-refresh": F13A0,
   "table-remove": F0A76,
@@ -5606,6 +5687,7 @@ $mdi-icons: (
   "theme-light-dark": F050E,
   "thermometer": F050F,
   "thermometer-alert": F0E01,
+  "thermometer-bluetooth": F1895,
   "thermometer-chevron-down": F0E02,
   "thermometer-chevron-up": F0E03,
   "thermometer-high": F10C2,
@@ -5661,6 +5743,7 @@ $mdi-icons: (
   "timer-sand-empty": F06AD,
   "timer-sand-full": F078C,
   "timetable": F0520,
+  "tire": F1896,
   "toaster": F1063,
   "toaster-off": F11B7,
   "toaster-oven": F0CD3,
@@ -5674,6 +5757,7 @@ $mdi-icons: (
   "tools": F1064,
   "tooltip": F0523,
   "tooltip-account": F000C,
+  "tooltip-cellphone": F183B,
   "tooltip-check": F155C,
   "tooltip-check-outline": F155D,
   "tooltip-edit": F0524,
@@ -5701,6 +5785,7 @@ $mdi-icons: (
   "tow-truck": F083C,
   "tower-beach": F0681,
   "tower-fire": F0682,
+  "town-hall": F1875,
   "toy-brick": F1288,
   "toy-brick-marker": F1289,
   "toy-brick-marker-outline": F128A,
@@ -5783,6 +5868,7 @@ $mdi-icons: (
   "truck-delivery-outline": F129B,
   "truck-fast": F0788,
   "truck-fast-outline": F129C,
+  "truck-flatbed": F1891,
   "truck-outline": F129D,
   "truck-trailer": F0727,
   "trumpet": F1096,
@@ -5797,6 +5883,8 @@ $mdi-icons: (
   "tune-variant": F1542,
   "tune-vertical": F066A,
   "tune-vertical-variant": F1543,
+  "tunnel": F183D,
+  "tunnel-outline": F183E,
   "turkey": F171B,
   "turnstile": F0CD5,
   "turnstile-outline": F0CD6,
@@ -5812,6 +5900,8 @@ $mdi-icons: (
   "ultra-high-definition": F07F9,
   "umbraco": F0549,
   "umbrella": F054A,
+  "umbrella-beach": F188A,
+  "umbrella-beach-outline": F188B,
   "umbrella-closed": F09B0,
   "umbrella-closed-outline": F13E2,
   "umbrella-closed-variant": F13E1,
@@ -5869,6 +5959,7 @@ $mdi-icons: (
   "vector-link": F0FE8,
   "vector-point": F055F,
   "vector-polygon": F0560,
+  "vector-polygon-variant": F1856,
   "vector-polyline": F0561,
   "vector-polyline-edit": F1225,
   "vector-polyline-minus": F1226,
@@ -5878,6 +5969,8 @@ $mdi-icons: (
   "vector-rectangle": F05C6,
   "vector-selection": F0562,
   "vector-square": F0001,
+  "vector-square-close": F1857,
+  "vector-square-open": F1858,
   "vector-triangle": F0563,
   "vector-union": F0564,
   "vhs": F0A1B,
@@ -5931,6 +6024,8 @@ $mdi-icons: (
   "view-dashboard-variant-outline": F1489,
   "view-day": F056F,
   "view-day-outline": F148A,
+  "view-gallery": F1888,
+  "view-gallery-outline": F1889,
   "view-grid": F0570,
   "view-grid-outline": F11D9,
   "view-grid-plus": F0F8D,
@@ -6023,6 +6118,7 @@ $mdi-icons: (
   "water-minus-outline": F1507,
   "water-off": F058D,
   "water-off-outline": F1508,
+  "water-opacity": F1855,
   "water-outline": F0E0A,
   "water-percent": F058E,
   "water-percent-alert": F1509,
@@ -6036,12 +6132,16 @@ $mdi-icons: (
   "water-sync": F17C6,
   "water-well": F106B,
   "water-well-outline": F106C,
+  "waterfall": F1849,
   "watering-can": F1481,
   "watering-can-outline": F1482,
   "watermark": F0612,
   "wave": F0F2E,
   "waveform": F147D,
   "waves": F078D,
+  "waves-arrow-left": F1859,
+  "waves-arrow-right": F185A,
+  "waves-arrow-up": F185B,
   "waze": F0BDE,
   "weather-cloudy": F0590,
   "weather-cloudy-alert": F0F2F,
