--- a/css/materialdesignicons.css
+++ b/css/materialdesignicons.css
@@ -1,8 +1,8 @@
 /* MaterialDesignIcons.com */
 @font-face {
   font-family: "Material Design Icons";
-  src: url("../fonts/materialdesignicons-webfont.eot?v=6.1.95");
-  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=6.1.95") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=6.1.95") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=6.1.95") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=6.1.95") format("truetype");
+  src: url("../fonts/materialdesignicons-webfont.eot?v=6.2.95");
+  src: url("../fonts/materialdesignicons-webfont.eot?#iefix&v=6.2.95") format("embedded-opentype"), url("../fonts/materialdesignicons-webfont.woff2?v=6.2.95") format("woff2"), url("../fonts/materialdesignicons-webfont.woff?v=6.2.95") format("woff"), url("../fonts/materialdesignicons-webfont.ttf?v=6.2.95") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
@@ -86,6 +86,14 @@
   content: "\F0B50";
 }
 
+.mdi-account-arrow-down::before {
+  content: "\F1868";
+}
+
+.mdi-account-arrow-down-outline::before {
+  content: "\F1869";
+}
+
 .mdi-account-arrow-left::before {
   content: "\F0B51";
 }
@@ -100,6 +108,14 @@
 
 .mdi-account-arrow-right-outline::before {
   content: "\F0B54";
+}
+
+.mdi-account-arrow-up::before {
+  content: "\F1867";
+}
+
+.mdi-account-arrow-up-outline::before {
+  content: "\F186A";
 }
 
 .mdi-account-box::before {
@@ -502,12 +518,56 @@
   content: "\F001D";
 }
 
+.mdi-airplane-alert::before {
+  content: "\F187A";
+}
+
+.mdi-airplane-check::before {
+  content: "\F187B";
+}
+
+.mdi-airplane-clock::before {
+  content: "\F187C";
+}
+
+.mdi-airplane-cog::before {
+  content: "\F187D";
+}
+
+.mdi-airplane-edit::before {
+  content: "\F187E";
+}
+
 .mdi-airplane-landing::before {
   content: "\F05D4";
 }
 
+.mdi-airplane-marker::before {
+  content: "\F187F";
+}
+
+.mdi-airplane-minus::before {
+  content: "\F1880";
+}
+
 .mdi-airplane-off::before {
   content: "\F001E";
+}
+
+.mdi-airplane-plus::before {
+  content: "\F1881";
+}
+
+.mdi-airplane-remove::before {
+  content: "\F1882";
+}
+
+.mdi-airplane-search::before {
+  content: "\F1883";
+}
+
+.mdi-airplane-settings::before {
+  content: "\F1884";
 }
 
 .mdi-airplane-takeoff::before {
@@ -704,6 +764,14 @@
 
 .mdi-all-inclusive::before {
   content: "\F06BE";
+}
+
+.mdi-all-inclusive-box::before {
+  content: "\F188D";
+}
+
+.mdi-all-inclusive-box-outline::before {
+  content: "\F188E";
 }
 
 .mdi-allergy::before {
@@ -2006,6 +2074,14 @@
   content: "\F17A8";
 }
 
+.mdi-arrow-projectile::before {
+  content: "\F1840";
+}
+
+.mdi-arrow-projectile-multiple::before {
+  content: "\F183F";
+}
+
 .mdi-arrow-right::before {
   content: "\F0054";
 }
@@ -2334,6 +2410,18 @@
   content: "\F0066";
 }
 
+.mdi-audio-input-rca::before {
+  content: "\F186B";
+}
+
+.mdi-audio-input-stereo-minijack::before {
+  content: "\F186C";
+}
+
+.mdi-audio-input-xlr::before {
+  content: "\F186D";
+}
+
 .mdi-audio-video::before {
   content: "\F093D";
 }
@@ -2372,6 +2460,10 @@
 
 .mdi-axe::before {
   content: "\F08C8";
+}
+
+.mdi-axe-battle::before {
+  content: "\F1842";
 }
 
 .mdi-axis::before {
@@ -3100,6 +3192,14 @@
 
 .mdi-battery-remove-outline::before {
   content: "\F17E9";
+}
+
+.mdi-battery-sync::before {
+  content: "\F1834";
+}
+
+.mdi-battery-sync-outline::before {
+  content: "\F1835";
 }
 
 .mdi-battery-unknown::before {
@@ -4022,6 +4122,10 @@
   content: "\F1310";
 }
 
+.mdi-bow-arrow::before {
+  content: "\F1841";
+}
+
 .mdi-bow-tie::before {
   content: "\F0678";
 }
@@ -4398,6 +4502,10 @@
   content: "\F158A";
 }
 
+.mdi-cabin-a-frame::before {
+  content: "\F188C";
+}
+
 .mdi-cable-data::before {
   content: "\F1394";
 }
@@ -4672,6 +4780,14 @@
 
 .mdi-camera-control::before {
   content: "\F0B69";
+}
+
+.mdi-camera-document::before {
+  content: "\F1871";
+}
+
+.mdi-camera-document-off::before {
+  content: "\F1872";
 }
 
 .mdi-camera-enhance::before {
@@ -4994,6 +5110,10 @@
   content: "\F0FA6";
 }
 
+.mdi-car-select::before {
+  content: "\F1879";
+}
+
 .mdi-car-settings::before {
   content: "\F13CD";
 }
@@ -5032,6 +5152,10 @@
 
 .mdi-car-windshield-outline::before {
   content: "\F101C";
+}
+
+.mdi-car-wireless::before {
+  content: "\F1878";
 }
 
 .mdi-car-wrench::before {
@@ -5266,6 +5390,10 @@
   content: "\F14EE";
 }
 
+.mdi-cash-fast::before {
+  content: "\F185C";
+}
+
 .mdi-cash-lock::before {
   content: "\F14EA";
 }
@@ -5346,6 +5474,10 @@
   content: "\F07AE";
 }
 
+.mdi-cctv-off::before {
+  content: "\F185F";
+}
+
 .mdi-ceiling-fan::before {
   content: "\F1797";
 }
@@ -5408,6 +5540,10 @@
 
 .mdi-cellphone-lock::before {
   content: "\F094F";
+}
+
+.mdi-cellphone-marker::before {
+  content: "\F183A";
 }
 
 .mdi-cellphone-message::before {
@@ -6090,6 +6226,10 @@
   content: "\F10D3";
 }
 
+.mdi-circle-opacity::before {
+  content: "\F1853";
+}
+
 .mdi-circle-outline::before {
   content: "\F0766";
 }
@@ -6410,12 +6550,36 @@
   content: "\F0153";
 }
 
+.mdi-clock-minus::before {
+  content: "\F1863";
+}
+
+.mdi-clock-minus-outline::before {
+  content: "\F1864";
+}
+
 .mdi-clock-out::before {
   content: "\F0154";
 }
 
 .mdi-clock-outline::before {
   content: "\F0150";
+}
+
+.mdi-clock-plus::before {
+  content: "\F1861";
+}
+
+.mdi-clock-plus-outline::before {
+  content: "\F1862";
+}
+
+.mdi-clock-remove::before {
+  content: "\F1865";
+}
+
+.mdi-clock-remove-outline::before {
+  content: "\F1866";
 }
 
 .mdi-clock-start::before {
@@ -7838,6 +8002,14 @@
   content: "\F05E7";
 }
 
+.mdi-curtains::before {
+  content: "\F1846";
+}
+
+.mdi-curtains-closed::before {
+  content: "\F1847";
+}
+
 .mdi-dance-ballroom::before {
   content: "\F15FB";
 }
@@ -8446,6 +8618,10 @@
   content: "\F11CD";
 }
 
+.mdi-diversify::before {
+  content: "\F1877";
+}
+
 .mdi-diving-flippers::before {
   content: "\F0DBF";
 }
@@ -8790,6 +8966,22 @@
   content: "\F0A45";
 }
 
+.mdi-earbuds::before {
+  content: "\F184F";
+}
+
+.mdi-earbuds-off::before {
+  content: "\F1850";
+}
+
+.mdi-earbuds-off-outline::before {
+  content: "\F1851";
+}
+
+.mdi-earbuds-outline::before {
+  content: "\F1852";
+}
+
 .mdi-earth::before {
   content: "\F01E7";
 }
@@ -8840,6 +9032,10 @@
 
 .mdi-egg-easter::before {
   content: "\F0AB0";
+}
+
+.mdi-egg-fried::before {
+  content: "\F184A";
 }
 
 .mdi-egg-off::before {
@@ -8948,6 +9144,14 @@
 
 .mdi-email-edit-outline::before {
   content: "\F0EE4";
+}
+
+.mdi-email-fast::before {
+  content: "\F186F";
+}
+
+.mdi-email-fast-outline::before {
+  content: "\F1870";
 }
 
 .mdi-email-lock::before {
@@ -10598,6 +10802,14 @@
   content: "\F09F0";
 }
 
+.mdi-flower-pollen::before {
+  content: "\F1885";
+}
+
+.mdi-flower-pollen-outline::before {
+  content: "\F1886";
+}
+
 .mdi-flower-poppy::before {
   content: "\F0D08";
 }
@@ -10966,6 +11178,10 @@
   content: "\F1572";
 }
 
+.mdi-food-hot-dog::before {
+  content: "\F184B";
+}
+
 .mdi-food-kosher::before {
   content: "\F1573";
 }
@@ -10980,6 +11196,14 @@
 
 .mdi-food-steak-off::before {
   content: "\F146B";
+}
+
+.mdi-food-takeout-box::before {
+  content: "\F1836";
+}
+
+.mdi-food-takeout-box-outline::before {
+  content: "\F1837";
 }
 
 .mdi-food-turkey::before {
@@ -11008,6 +11232,10 @@
 
 .mdi-football-helmet::before {
   content: "\F025F";
+}
+
+.mdi-forest::before {
+  content: "\F1897";
 }
 
 .mdi-forklift::before {
@@ -11252,6 +11480,10 @@
 
 .mdi-format-list-checks::before {
   content: "\F0756";
+}
+
+.mdi-format-list-group::before {
+  content: "\F1860";
 }
 
 .mdi-format-list-numbered::before {
@@ -11998,6 +12230,10 @@
   content: "\F02A5";
 }
 
+.mdi-glass-fragile::before {
+  content: "\F1873";
+}
+
 .mdi-glass-mug::before {
   content: "\F02A6";
 }
@@ -12354,6 +12590,10 @@
   content: "\F1322";
 }
 
+.mdi-hammer-sickle::before {
+  content: "\F1887";
+}
+
 .mdi-hammer-wrench::before {
   content: "\F1323";
 }
@@ -12388,6 +12628,14 @@
 
 .mdi-hand-back-right-outline::before {
   content: "\F182D";
+}
+
+.mdi-hand-coin::before {
+  content: "\F188F";
+}
+
+.mdi-hand-coin-outline::before {
+  content: "\F1890";
 }
 
 .mdi-hand-front-left::before {
@@ -13126,6 +13374,10 @@
   content: "\F15C1";
 }
 
+.mdi-horse-variant-fast::before {
+  content: "\F186E";
+}
+
 .mdi-horseshoe::before {
   content: "\F0A58";
 }
@@ -13278,6 +13530,10 @@
   content: "\F0A5E";
 }
 
+.mdi-human-non-binary::before {
+  content: "\F1848";
+}
+
 .mdi-human-pregnant::before {
   content: "\F05CF";
 }
@@ -13316,6 +13572,10 @@
 
 .mdi-hydro-power::before {
   content: "\F12E5";
+}
+
+.mdi-hydrogen-station::before {
+  content: "\F1894";
 }
 
 .mdi-ice-cream::before {
@@ -13566,6 +13826,10 @@
   content: "\F0075";
 }
 
+.mdi-induction::before {
+  content: "\F184C";
+}
+
 .mdi-infinity::before {
   content: "\F06E4";
 }
@@ -13628,6 +13892,10 @@
 
 .mdi-iron::before {
   content: "\F1824";
+}
+
+.mdi-iron-board::before {
+  content: "\F1838";
 }
 
 .mdi-iron-outline::before {
@@ -14148,6 +14416,10 @@
 
 .mdi-layers::before {
   content: "\F0328";
+}
+
+.mdi-layers-edit::before {
+  content: "\F1892";
 }
 
 .mdi-layers-minus::before {
@@ -14702,12 +14974,20 @@
   content: "\F1084";
 }
 
+.mdi-mace::before {
+  content: "\F1843";
+}
+
 .mdi-magazine-pistol::before {
   content: "\F0324";
 }
 
 .mdi-magazine-rifle::before {
   content: "\F0323";
+}
+
+.mdi-magic-staff::before {
+  content: "\F1844";
 }
 
 .mdi-magnet::before {
@@ -14724,6 +15004,10 @@
 
 .mdi-magnify-close::before {
   content: "\F0980";
+}
+
+.mdi-magnify-expand::before {
+  content: "\F1874";
 }
 
 .mdi-magnify-minus::before {
@@ -15670,6 +15954,10 @@
   content: "\F1104";
 }
 
+.mdi-monitor-small::before {
+  content: "\F1876";
+}
+
 .mdi-monitor-speaker::before {
   content: "\F0F5F";
 }
@@ -16040,6 +16328,10 @@
 
 .mdi-muffin::before {
   content: "\F098C";
+}
+
+.mdi-multicast::before {
+  content: "\F1893";
 }
 
 .mdi-multiplication::before {
@@ -17902,6 +18194,10 @@
   content: "\F0889";
 }
 
+.mdi-pipe-valve::before {
+  content: "\F184D";
+}
+
 .mdi-pipe-wrench::before {
   content: "\F1354";
 }
@@ -18128,6 +18424,10 @@
 
 .mdi-police-badge-outline::before {
   content: "\F1168";
+}
+
+.mdi-police-station::before {
+  content: "\F1839";
 }
 
 .mdi-poll::before {
@@ -18660,6 +18960,14 @@
 
 .mdi-radioactive::before {
   content: "\F043C";
+}
+
+.mdi-radioactive-circle::before {
+  content: "\F185D";
+}
+
+.mdi-radioactive-circle-outline::before {
+  content: "\F185E";
 }
 
 .mdi-radioactive-off::before {
@@ -20274,6 +20582,10 @@
   content: "\F0833";
 }
 
+.mdi-shipping-pallet::before {
+  content: "\F184E";
+}
+
 .mdi-shoe-ballet::before {
   content: "\F15CA";
 }
@@ -21134,6 +21446,10 @@
   content: "\F071F";
 }
 
+.mdi-spear::before {
+  content: "\F1845";
+}
+
 .mdi-speedometer::before {
   content: "\F04C5";
 }
@@ -21232,6 +21548,10 @@
 
 .mdi-square-off-outline::before {
   content: "\F12EF";
+}
+
+.mdi-square-opacity::before {
+  content: "\F1854";
 }
 
 .mdi-square-outline::before {
@@ -21974,6 +22294,10 @@
   content: "\F1743";
 }
 
+.mdi-table-pivot::before {
+  content: "\F183C";
+}
+
 .mdi-table-plus::before {
   content: "\F0A75";
 }
@@ -22410,6 +22734,10 @@
   content: "\F0E01";
 }
 
+.mdi-thermometer-bluetooth::before {
+  content: "\F1895";
+}
+
 .mdi-thermometer-chevron-down::before {
   content: "\F0E02";
 }
@@ -22630,6 +22958,10 @@
   content: "\F0520";
 }
 
+.mdi-tire::before {
+  content: "\F1896";
+}
+
 .mdi-toaster::before {
   content: "\F1063";
 }
@@ -22680,6 +23012,10 @@
 
 .mdi-tooltip-account::before {
   content: "\F000C";
+}
+
+.mdi-tooltip-cellphone::before {
+  content: "\F183B";
 }
 
 .mdi-tooltip-check::before {
@@ -22788,6 +23124,10 @@
 
 .mdi-tower-fire::before {
   content: "\F0682";
+}
+
+.mdi-town-hall::before {
+  content: "\F1875";
 }
 
 .mdi-toy-brick::before {
@@ -23118,6 +23458,10 @@
   content: "\F129C";
 }
 
+.mdi-truck-flatbed::before {
+  content: "\F1891";
+}
+
 .mdi-truck-outline::before {
   content: "\F129D";
 }
@@ -23172,6 +23516,14 @@
 
 .mdi-tune-vertical-variant::before {
   content: "\F1543";
+}
+
+.mdi-tunnel::before {
+  content: "\F183D";
+}
+
+.mdi-tunnel-outline::before {
+  content: "\F183E";
 }
 
 .mdi-turkey::before {
@@ -23232,6 +23584,14 @@
 
 .mdi-umbrella::before {
   content: "\F054A";
+}
+
+.mdi-umbrella-beach::before {
+  content: "\F188A";
+}
+
+.mdi-umbrella-beach-outline::before {
+  content: "\F188B";
 }
 
 .mdi-umbrella-closed::before {
@@ -23462,6 +23822,10 @@
   content: "\F0560";
 }
 
+.mdi-vector-polygon-variant::before {
+  content: "\F1856";
+}
+
 .mdi-vector-polyline::before {
   content: "\F0561";
 }
@@ -23496,6 +23860,14 @@
 
 .mdi-vector-square::before {
   content: "\F0001";
+}
+
+.mdi-vector-square-close::before {
+  content: "\F1857";
+}
+
+.mdi-vector-square-open::before {
+  content: "\F1858";
 }
 
 .mdi-vector-triangle::before {
@@ -23708,6 +24080,14 @@
 
 .mdi-view-day-outline::before {
   content: "\F148A";
+}
+
+.mdi-view-gallery::before {
+  content: "\F1888";
+}
+
+.mdi-view-gallery-outline::before {
+  content: "\F1889";
 }
 
 .mdi-view-grid::before {
@@ -24078,6 +24458,10 @@
   content: "\F1508";
 }
 
+.mdi-water-opacity::before {
+  content: "\F1855";
+}
+
 .mdi-water-outline::before {
   content: "\F0E0A";
 }
@@ -24130,6 +24514,10 @@
   content: "\F106C";
 }
 
+.mdi-waterfall::before {
+  content: "\F1849";
+}
+
 .mdi-watering-can::before {
   content: "\F1481";
 }
@@ -24152,6 +24540,18 @@
 
 .mdi-waves::before {
   content: "\F078D";
+}
+
+.mdi-waves-arrow-left::before {
+  content: "\F1859";
+}
+
+.mdi-waves-arrow-right::before {
+  content: "\F185A";
+}
+
+.mdi-waves-arrow-up::before {
+  content: "\F185B";
 }
 
 .mdi-waze::before {
