--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "6.2.95" !default;
+$mdi-version:          "6.3.95" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -115,6 +115,8 @@ $mdi-icons: (
   "account-switch": F0019,
   "account-switch-outline": F04CB,
   "account-tie": F0CE3,
+  "account-tie-hat": F1898,
+  "account-tie-hat-outline": F1899,
   "account-tie-outline": F10CA,
   "account-tie-voice": F1308,
   "account-tie-voice-off": F130A,
@@ -122,6 +124,8 @@ $mdi-icons: (
   "account-tie-voice-outline": F1309,
   "account-voice": F05CB,
   "account-voice-off": F0ED4,
+  "account-wrench": F189A,
+  "account-wrench-outline": F189B,
   "adjust": F001A,
   "air-conditioner": F001B,
   "air-filter": F0D43,
@@ -706,6 +710,8 @@ $mdi-icons: (
   "baseball-diamond-outline": F15ED,
   "bash": F1183,
   "basket": F0076,
+  "basket-check": F18E5,
+  "basket-check-outline": F18E6,
   "basket-fill": F0077,
   "basket-minus": F1523,
   "basket-minus-outline": F1524,
@@ -868,6 +874,7 @@ $mdi-icons: (
   "biathlon": F0E14,
   "bicycle": F109C,
   "bicycle-basket": F1235,
+  "bicycle-cargo": F189C,
   "bicycle-electric": F15B4,
   "bicycle-penny-farthing": F15E9,
   "bike": F00A3,
@@ -1153,9 +1160,11 @@ $mdi-icons: (
   "calendar-check-outline": F0C44,
   "calendar-clock": F00F0,
   "calendar-clock-outline": F16E1,
+  "calendar-collapse-horizontal": F189D,
   "calendar-cursor": F157B,
   "calendar-edit": F08A7,
   "calendar-end": F166C,
+  "calendar-expand-horizontal": F189E,
   "calendar-export": F0B24,
   "calendar-heart": F09D2,
   "calendar-import": F0B25,
@@ -1328,12 +1337,32 @@ $mdi-icons: (
   "card-text-outline": F0B78,
   "cards": F0638,
   "cards-club": F08CE,
+  "cards-club-outline": F189F,
   "cards-diamond": F08CF,
   "cards-diamond-outline": F101D,
   "cards-heart": F08D0,
+  "cards-heart-outline": F18A0,
   "cards-outline": F0639,
+  "cards-playing": F18A1,
+  "cards-playing-club": F18A2,
+  "cards-playing-club-multiple": F18A3,
+  "cards-playing-club-multiple-outline": F18A4,
+  "cards-playing-club-outline": F18A5,
+  "cards-playing-diamond": F18A6,
+  "cards-playing-diamond-multiple": F18A7,
+  "cards-playing-diamond-multiple-outline": F18A8,
+  "cards-playing-diamond-outline": F18A9,
+  "cards-playing-heart": F18AA,
+  "cards-playing-heart-multiple": F18AB,
+  "cards-playing-heart-multiple-outline": F18AC,
+  "cards-playing-heart-outline": F18AD,
   "cards-playing-outline": F063A,
+  "cards-playing-spade": F18AE,
+  "cards-playing-spade-multiple": F18AF,
+  "cards-playing-spade-multiple-outline": F18B0,
+  "cards-playing-spade-outline": F18B1,
   "cards-spade": F08D1,
+  "cards-spade-outline": F18B2,
   "cards-variant": F06C7,
   "carrot": F010F,
   "cart": F0110,
@@ -1341,6 +1370,7 @@ $mdi-icons: (
   "cart-arrow-right": F0C4E,
   "cart-arrow-up": F0D67,
   "cart-check": F15EA,
+  "cart-heart": F18E0,
   "cart-minus": F0D68,
   "cart-off": F066B,
   "cart-outline": F0111,
@@ -1376,6 +1406,8 @@ $mdi-icons: (
   "ceiling-fan": F1797,
   "ceiling-fan-light": F1798,
   "ceiling-light": F0769,
+  "ceiling-light-multiple": F18DD,
+  "ceiling-light-multiple-outline": F18DE,
   "ceiling-light-outline": F17C7,
   "cellphone": F011C,
   "cellphone-arrow-down": F09D5,
@@ -1622,6 +1654,8 @@ $mdi-icons: (
   "clipboard-search": F161E,
   "clipboard-search-outline": F161F,
   "clipboard-text": F014D,
+  "clipboard-text-clock": F18F9,
+  "clipboard-text-clock-outline": F18FA,
   "clipboard-text-multiple": F126B,
   "clipboard-text-multiple-outline": F126C,
   "clipboard-text-off": F1620,
@@ -1811,6 +1845,7 @@ $mdi-icons: (
   "comment-text-outline": F0189,
   "compare": F018A,
   "compare-horizontal": F1492,
+  "compare-remove": F18B3,
   "compare-vertical": F1493,
   "compass": F018B,
   "compass-off": F0B80,
@@ -1840,6 +1875,8 @@ $mdi-icons: (
   "content-save-alert-outline": F0F43,
   "content-save-all": F0194,
   "content-save-all-outline": F0F44,
+  "content-save-check": F18EA,
+  "content-save-check-outline": F18EB,
   "content-save-cog": F145B,
   "content-save-cog-outline": F145C,
   "content-save-edit": F0CFB,
@@ -1904,6 +1941,8 @@ $mdi-icons: (
   "credit-card-clock-outline": F0EE2,
   "credit-card-edit": F17D7,
   "credit-card-edit-outline": F17D8,
+  "credit-card-lock": F18E7,
+  "credit-card-lock-outline": F18E8,
   "credit-card-marker": F06A8,
   "credit-card-marker-outline": F0DBE,
   "credit-card-minus": F0FAC,
@@ -2185,6 +2224,7 @@ $mdi-icons: (
   "dog-side-off": F16EE,
   "dolby": F06B3,
   "dolly": F0E9E,
+  "dolphin": F18B4,
   "domain": F01D7,
   "domain-off": F0D6F,
   "domain-plus": F10AD,
@@ -2599,6 +2639,8 @@ $mdi-icons: (
   "filmstrip-box-multiple": F0D18,
   "filmstrip-off": F0231,
   "filter": F0232,
+  "filter-check": F18EC,
+  "filter-check-outline": F18ED,
   "filter-menu": F10E5,
   "filter-menu-outline": F10E6,
   "filter-minus": F0EEE,
@@ -2640,10 +2682,14 @@ $mdi-icons: (
   "fishbowl-outline": F0EF4,
   "fit-to-page": F0EF5,
   "fit-to-page-outline": F0EF6,
+  "fit-to-screen": F18F4,
+  "fit-to-screen-outline": F18F5,
   "flag": F023B,
   "flag-checkered": F023C,
   "flag-minus": F0B99,
   "flag-minus-outline": F10B2,
+  "flag-off": F18EE,
+  "flag-off-outline": F18EF,
   "flag-outline": F023D,
   "flag-plus": F0B9A,
   "flag-plus-outline": F10B3,
@@ -2912,6 +2958,7 @@ $mdi-icons: (
   "format-textdirection-r-to-l": F0286,
   "format-title": F05F4,
   "format-underline": F0287,
+  "format-underline-wavy": F18E9,
   "format-vertical-align-bottom": F0621,
   "format-vertical-align-center": F0622,
   "format-vertical-align-top": F0623,
@@ -2957,6 +3004,7 @@ $mdi-icons: (
   "fruit-pineapple": F1046,
   "fruit-watermelon": F1047,
   "fuel": F07CA,
+  "fuel-cell": F18B5,
   "fullscreen": F0293,
   "fullscreen-exit": F0294,
   "function": F0295,
@@ -3163,6 +3211,8 @@ $mdi-icons: (
   "hand-back-right-outline": F182D,
   "hand-coin": F188F,
   "hand-coin-outline": F1890,
+  "hand-extended": F18B6,
+  "hand-extended-outline": F18B7,
   "hand-front-left": F182B,
   "hand-front-left-outline": F182E,
   "hand-front-right": F0A4F,
@@ -3782,6 +3832,8 @@ $mdi-icons: (
   "map-clock-outline": F0D1F,
   "map-legend": F0A01,
   "map-marker": F034E,
+  "map-marker-account": F18E3,
+  "map-marker-account-outline": F18E4,
   "map-marker-alert": F0F05,
   "map-marker-alert-outline": F0F06,
   "map-marker-check": F0C95,
@@ -4139,6 +4191,8 @@ $mdi-icons: (
   "nature-people": F038F,
   "navigation": F0390,
   "navigation-outline": F1607,
+  "navigation-variant": F18F0,
+  "navigation-variant-outline": F18F1,
   "near-me": F05CD,
   "necklace": F0F0B,
   "needle": F0391,
@@ -4659,6 +4713,8 @@ $mdi-icons: (
   "printer-3d-nozzle": F0E5B,
   "printer-3d-nozzle-alert": F11C0,
   "printer-3d-nozzle-alert-outline": F11C1,
+  "printer-3d-nozzle-heat": F18B8,
+  "printer-3d-nozzle-heat-outline": F18B9,
   "printer-3d-nozzle-outline": F0E5C,
   "printer-alert": F042C,
   "printer-check": F1146,
@@ -4782,6 +4838,7 @@ $mdi-icons: (
   "reflect-horizontal": F0A0E,
   "reflect-vertical": F0A0F,
   "refresh": F0450,
+  "refresh-auto": F18F2,
   "refresh-circle": F1377,
   "regex": F0451,
   "registered-trademark": F0A67,
@@ -5098,8 +5155,10 @@ $mdi-icons: (
   "share-outline": F0932,
   "share-variant": F0497,
   "share-variant-outline": F1514,
+  "shark": F18BA,
   "shark-fin": F1673,
   "shark-fin-outline": F1674,
+  "shark-off": F18BB,
   "sheep": F0CC6,
   "shield": F0498,
   "shield-account": F088F,
@@ -5117,6 +5176,8 @@ $mdi-icons: (
   "shield-check-outline": F0CC8,
   "shield-cross": F0CC9,
   "shield-cross-outline": F0CCA,
+  "shield-crown": F18BC,
+  "shield-crown-outline": F18BD,
   "shield-edit": F11A0,
   "shield-edit-outline": F11A1,
   "shield-half": F1360,
@@ -5145,6 +5206,8 @@ $mdi-icons: (
   "shield-star-outline": F113C,
   "shield-sun": F105D,
   "shield-sun-outline": F105E,
+  "shield-sword": F18BE,
+  "shield-sword-outline": F18BF,
   "shield-sync": F11A2,
   "shield-sync-outline": F11A3,
   "shimmer": F1545,
@@ -5170,6 +5233,7 @@ $mdi-icons: (
   "shuffle-disabled": F049E,
   "shuffle-variant": F049F,
   "shuriken": F137F,
+  "sickle": F18C0,
   "sigma": F04A0,
   "sigma-lower": F062B,
   "sign-caution": F04A1,
@@ -5264,6 +5328,8 @@ $mdi-icons: (
   "slot-machine": F1114,
   "slot-machine-outline": F1115,
   "smart-card": F10BD,
+  "smart-card-off": F18F7,
+  "smart-card-off-outline": F18F8,
   "smart-card-outline": F10BE,
   "smart-card-reader": F10BF,
   "smart-card-reader-outline": F10C0,
@@ -5477,10 +5543,31 @@ $mdi-icons: (
   "stop-circle-outline": F0667,
   "store": F04DC,
   "store-24-hour": F04DD,
+  "store-alert": F18C1,
+  "store-alert-outline": F18C2,
+  "store-check": F18C3,
+  "store-check-outline": F18C4,
+  "store-clock": F18C5,
+  "store-clock-outline": F18C6,
+  "store-cog": F18C7,
+  "store-cog-outline": F18C8,
+  "store-edit": F18C9,
+  "store-edit-outline": F18CA,
+  "store-marker": F18CB,
+  "store-marker-outline": F18CC,
   "store-minus": F165E,
+  "store-minus-outline": F18CD,
+  "store-off": F18CE,
+  "store-off-outline": F18CF,
   "store-outline": F1361,
   "store-plus": F165F,
+  "store-plus-outline": F18D0,
   "store-remove": F1660,
+  "store-remove-outline": F18D1,
+  "store-search": F18D2,
+  "store-search-outline": F18D3,
+  "store-settings": F18D4,
+  "store-settings-outline": F18D5,
   "storefront": F07C7,
   "storefront-outline": F10C1,
   "stove": F04DE,
@@ -5499,6 +5586,8 @@ $mdi-icons: (
   "subway-variant": F04DF,
   "summit": F0786,
   "sun-snowflake": F1796,
+  "sun-thermometer": F18D6,
+  "sun-thermometer-outline": F18D7,
   "sun-wireless": F17FE,
   "sun-wireless-outline": F17FF,
   "sunglasses": F04E0,
@@ -5635,6 +5724,7 @@ $mdi-icons: (
   "tea": F0D9E,
   "tea-outline": F0D9F,
   "teamviewer": F0500,
+  "teddy-bear": F18FB,
   "telescope": F0B4E,
   "television": F0502,
   "television-ambient-light": F1356,
@@ -5714,6 +5804,7 @@ $mdi-icons: (
   "ticket-percent-outline": F142B,
   "tie": F0519,
   "tilde": F0725,
+  "tilde-off": F18F3,
   "timelapse": F051A,
   "timeline": F0BD1,
   "timeline-alert": F0F95,
@@ -5862,6 +5953,7 @@ $mdi-icons: (
   "trophy-variant": F053B,
   "trophy-variant-outline": F053C,
   "truck": F053D,
+  "truck-cargo-container": F18D8,
   "truck-check": F0CD4,
   "truck-check-outline": F129A,
   "truck-delivery": F053E,
@@ -5970,7 +6062,11 @@ $mdi-icons: (
   "vector-selection": F0562,
   "vector-square": F0001,
   "vector-square-close": F1857,
+  "vector-square-edit": F18D9,
+  "vector-square-minus": F18DA,
   "vector-square-open": F1858,
+  "vector-square-plus": F18DB,
+  "vector-square-remove": F18DC,
   "vector-triangle": F0563,
   "vector-union": F0564,
   "vhs": F0A1B,
@@ -6051,6 +6147,8 @@ $mdi-icons: (
   "violin": F060F,
   "virtual-reality": F0894,
   "virus": F13B6,
+  "virus-off": F18E1,
+  "virus-off-outline": F18E2,
   "virus-outline": F13B7,
   "vlc": F057C,
   "voicemail": F057D,
@@ -6146,6 +6244,7 @@ $mdi-icons: (
   "weather-cloudy": F0590,
   "weather-cloudy-alert": F0F2F,
   "weather-cloudy-arrow-right": F0E6E,
+  "weather-cloudy-clock": F18F6,
   "weather-fog": F0591,
   "weather-hail": F0592,
   "weather-hazy": F0F30,
@@ -6266,6 +6365,7 @@ $mdi-icons: (
   "windsock": F15FA,
   "wiper": F0AE9,
   "wiper-wash": F0DA6,
+  "wiper-wash-alert": F18DF,
   "wizard-hat": F1477,
   "wordpress": F05B4,
   "wrap": F05B6,
